# chip

./: .env.example  .gitignore  AGENT_DESIGN.md  AGENT_DESIGN_2.md  LICENSE  README.md  README_EN.md  about.md  chebupelka.py  chip.sh  install.sh  mock_ollama.py  mock_orchestrator.py  mock_simple.py  mock_smart.py  mock_tools.py  pyproject.toml
chip/: __init__.py  __main__.py  agent.py  api_validator.py  cache.py  cli.py  config.py  data_extractor.py  gpu_detect.py  history.py  llm.py  logger.py  memory.py  models_catalog.py  ollama_service.py  orchestrator.py  provider_api.py  providers.py  recovery.py  router.py  subagent.py  universal_agent.py
chip/context/: __init__.py  checkpoint.py  tracker.py
chip/tools/: __init__.py  base.py  bash.py  download.py  list_files.py  read_file.py  subagent.py  web_fetch.py  web_search.py  write_file.py
chip/ui/: __init__.py  chat.py  settings.py  terminal.py  textual_app.py
tests/: test_all.py  test_extractor.py  test_orchestrator.py
